docs: update docs

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -49,3 +49,28 @@ pre[class*="language-"] {
     margin: .8em 0!important;
     overflow: auto;
 }
+
+
+.dark .content__default code {
+    background-color: rgba(58,58,92,0.7);
+    color: #fff;
+}
+
+// .page .page-title {
+//    display: none;
+// }
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(148,152,156,.549)!important;
+    background-clip: padding-box!important;
+    border-radius: 10em!important;
+}
+
+::-webkit-scrollbar-track-piece {
+    background-color: transparent!important;
+    border-radius: 0!important;
+}
+
+::-webkit-scrollbar {
+    width: 7px!important;
+}
