chore: update version (1.0.23)

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -75,3 +75,11 @@ pre[class*="language-"] {
     width: 7px!important;
     height: 7px!important;
 }
+
+.navbar .logo{
+  border-radius: 0%!important;
+}
+
+.reco-eye,.leancloud-visitors{
+  display: none  !important;
+}
